[gd_scene load_steps=8 format=2]

[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Images/PersonPortrait/default-male-martial.jpg" type="Texture" id=2]
[ext_resource path="res://Fonts/font_header.tres" type="DynamicFont" id=3]
[ext_resource path="res://UIMain/PersonDetail/PersonDetail.gd" type="Script" id=4]
[ext_resource path="res://UIMain/Sounds/Close.wav" type="AudioStream" id=5]
[ext_resource path="res://Fonts/font_subheader.tres" type="DynamicFont" id=6]
[ext_resource path="res://UIMain/TabList/PersonList.tscn" type="PackedScene" id=7]

[node name="PersonDetail" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -342.0
margin_bottom = -168.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 16.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 288.0
margin_top = 16.0
custom_fonts/font = ExtResource( 3 )
text = "耒火(字字)"

[node name="Description" type="RichTextLabel" parent="."]
anchor_bottom = 1.0
margin_left = 17.0
margin_top = 288.0
margin_right = 448.0
margin_bottom = -16.0
bbcode_enabled = true
meta_underlined = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="GridContainer" parent="."]
anchor_right = 1.0
margin_left = 288.0
margin_top = 64.0
margin_right = -16.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="Status"]
margin_right = 108.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "GENDER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Status"]
margin_left = 116.0
margin_right = 224.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "FACTION"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Status"]
margin_left = 232.0
margin_right = 340.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "SECTION"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Status"]
margin_left = 348.0
margin_right = 456.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "LOCATION"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="Status"]
margin_left = 464.0
margin_right = 572.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "STATUS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label14" type="Label" parent="Status"]
margin_left = 580.0
margin_right = 688.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "MERIT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="Status"]
margin_left = 696.0
margin_right = 804.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "KARMA"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="Status"]
margin_left = 812.0
margin_right = 920.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "POPULARITY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label13" type="Label" parent="Status"]
margin_left = 928.0
margin_right = 1036.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "PRESTIGE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label15" type="Label" parent="Status"]
margin_left = 1044.0
margin_right = 1152.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "AMBITION"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label16" type="Label" parent="Status"]
margin_left = 1160.0
margin_right = 1268.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "MORALITY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gender" type="Label" parent="Status"]
margin_top = 26.0
margin_right = 108.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "男"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenderButton" type="Button" parent="Status"]
visible = false
margin_left = 116.0
margin_top = 26.0
margin_right = 224.0
margin_bottom = 44.0

[node name="Faction" type="Label" parent="Status"]
margin_left = 116.0
margin_top = 26.0
margin_right = 224.0
margin_bottom = 44.0
size_flags_horizontal = 3
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Section" type="Label" parent="Status"]
margin_left = 232.0
margin_top = 26.0
margin_right = 340.0
margin_bottom = 44.0
size_flags_horizontal = 3
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Location" type="Label" parent="Status"]
margin_left = 348.0
margin_top = 26.0
margin_right = 456.0
margin_bottom = 44.0
size_flags_horizontal = 3
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="Status"]
margin_left = 464.0
margin_top = 26.0
margin_right = 572.0
margin_bottom = 44.0
size_flags_horizontal = 3
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Merit" type="Label" parent="Status"]
margin_left = 580.0
margin_top = 26.0
margin_right = 688.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeritEdit" type="LineEdit" parent="Status"]
visible = false
margin_left = 852.0
margin_top = 26.0
margin_right = 986.0
margin_bottom = 54.0
size_flags_horizontal = 3
text = "10"
align = 1

[node name="Karma" type="Label" parent="Status"]
margin_left = 696.0
margin_top = 26.0
margin_right = 804.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KarmaEdit" type="LineEdit" parent="Status"]
visible = false
margin_left = 994.0
margin_top = 26.0
margin_right = 1128.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "10"
align = 1

[node name="Popularity" type="Label" parent="Status"]
margin_left = 812.0
margin_top = 26.0
margin_right = 920.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopularityEdit" type="LineEdit" parent="Status"]
visible = false
margin_left = 1136.0
margin_top = 26.0
margin_right = 1270.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "100"
align = 1

[node name="Prestige" type="Label" parent="Status"]
margin_left = 928.0
margin_top = 26.0
margin_right = 1036.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrestigeEdit" type="LineEdit" parent="Status"]
visible = false
margin_top = 52.0
margin_right = 134.0
margin_bottom = 70.0
size_flags_horizontal = 3
text = "100"
align = 1

[node name="Ambition" type="Label" parent="Status"]
margin_left = 1044.0
margin_top = 26.0
margin_right = 1152.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmbitionEdit" type="LineEdit" parent="Status"]
visible = false
margin_top = 52.0
margin_right = 134.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "100"
align = 1

[node name="Morality" type="Label" parent="Status"]
margin_left = 1160.0
margin_top = 26.0
margin_right = 1268.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoralityEdit" type="LineEdit" parent="Status"]
visible = false
margin_top = 52.0
margin_right = 134.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "100"
align = 1

[node name="Abilities" type="GridContainer" parent="."]
margin_left = 288.0
margin_top = 128.0
margin_right = 492.0
margin_bottom = 276.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Abilities"]
margin_right = 118.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "COMMAND"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Command" type="Label" parent="Abilities"]
margin_left = 126.0
margin_right = 204.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandEdit" type="LineEdit" parent="Abilities"]
visible = false
margin_top = 26.0
margin_right = 78.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "60"
align = 1

[node name="Label2" type="Label" parent="Abilities"]
margin_top = 26.0
margin_right = 118.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "STRENGTH"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strength" type="Label" parent="Abilities"]
margin_left = 126.0
margin_top = 26.0
margin_right = 204.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthEdit" type="LineEdit" parent="Abilities"]
visible = false
margin_top = 52.0
margin_right = 89.0
margin_bottom = 70.0
size_flags_horizontal = 3
text = "60"
align = 1

[node name="Label3" type="Label" parent="Abilities"]
margin_top = 52.0
margin_right = 118.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "INTELLIGENCE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intelligence" type="Label" parent="Abilities"]
margin_left = 126.0
margin_top = 52.0
margin_right = 204.0
margin_bottom = 70.0
size_flags_horizontal = 3
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntelligenceEdit" type="LineEdit" parent="Abilities"]
visible = false
margin_top = 78.0
margin_right = 118.0
margin_bottom = 96.0
size_flags_horizontal = 3
text = "60"
align = 1

[node name="Label4" type="Label" parent="Abilities"]
margin_top = 78.0
margin_right = 118.0
margin_bottom = 96.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "POLITICS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Politics" type="Label" parent="Abilities"]
margin_left = 126.0
margin_top = 78.0
margin_right = 204.0
margin_bottom = 96.0
size_flags_horizontal = 3
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoliticsEdit" type="LineEdit" parent="Abilities"]
visible = false
margin_top = 104.0
margin_right = 118.0
margin_bottom = 122.0
size_flags_horizontal = 3
text = "60"
align = 1

[node name="Label5" type="Label" parent="Abilities"]
margin_top = 104.0
margin_right = 118.0
margin_bottom = 122.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "GLAMOUR"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glamour" type="Label" parent="Abilities"]
margin_left = 126.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 122.0
size_flags_horizontal = 3
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlamourEdit" type="LineEdit" parent="Abilities"]
visible = false
margin_top = 130.0
margin_right = 118.0
margin_bottom = 148.0
size_flags_horizontal = 3
text = "60"
align = 1

[node name="Relations" type="GridContainer" parent="."]
anchor_right = 1.0
margin_left = 508.0
margin_top = 128.0
margin_right = -16.0
margin_bottom = 172.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Relations"]
margin_right = 207.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "IDEAL"
align = 1

[node name="Label" type="Label" parent="Relations"]
margin_left = 211.0
margin_right = 418.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "FATHER"
align = 1

[node name="Label2" type="Label" parent="Relations"]
margin_left = 422.0
margin_right = 629.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "MOTHER"
align = 1

[node name="Label3" type="Label" parent="Relations"]
margin_left = 633.0
margin_right = 840.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "SPOUSE"
align = 1

[node name="Label4" type="Label" parent="Relations"]
margin_left = 844.0
margin_right = 1051.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "BROTHER"
align = 1

[node name="Ideal" type="Label" parent="Relations"]
margin_top = 22.0
margin_right = 207.0
margin_bottom = 40.0
align = 1

[node name="IdealEdit" type="LineEdit" parent="Relations"]
visible = false
margin_top = 52.0
margin_right = 134.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "100"
align = 1

[node name="Father" type="Label" parent="Relations"]
margin_left = 211.0
margin_top = 22.0
margin_right = 418.0
margin_bottom = 40.0
align = 1

[node name="FatherEdit" type="Button" parent="Relations"]
visible = false
margin_left = 422.0
margin_top = 22.0
margin_right = 629.0
margin_bottom = 40.0

[node name="Mother" type="Label" parent="Relations"]
margin_left = 422.0
margin_top = 22.0
margin_right = 629.0
margin_bottom = 40.0
align = 1

[node name="MotherEdit" type="Button" parent="Relations"]
visible = false
margin_left = 422.0
margin_top = 22.0
margin_right = 629.0
margin_bottom = 40.0

[node name="Spouses" type="Label" parent="Relations"]
margin_left = 633.0
margin_top = 22.0
margin_right = 840.0
margin_bottom = 40.0
align = 1

[node name="SpousesEdit" type="Button" parent="Relations"]
visible = false
margin_left = 422.0
margin_top = 22.0
margin_right = 629.0
margin_bottom = 40.0

[node name="Brothers" type="Label" parent="Relations"]
margin_left = 844.0
margin_top = 22.0
margin_right = 1051.0
margin_bottom = 40.0
align = 1

[node name="BrothersEdit" type="Button" parent="Relations"]
visible = false
margin_left = 422.0
margin_top = 22.0
margin_right = 629.0
margin_bottom = 40.0

[node name="SkillsHeader" type="HBoxContainer" parent="."]
margin_left = 508.0
margin_top = 180.0
margin_right = 591.0
margin_bottom = 207.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SkillsHeader"]
margin_right = 83.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0.501961, 0, 1 )
text = "SKILLS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="Button" parent="SkillsHeader"]
visible = false
margin_left = 87.0
margin_right = 180.0
margin_bottom = 27.0
text = "EDIT"

[node name="Label2" type="Label" parent="SkillsHeader"]
visible = false
margin_left = 184.0
margin_top = 4.0
margin_right = 375.0
margin_bottom = 22.0
text = "SKILL_EDIT_INSTRUCTION"

[node name="Skills" type="GridContainer" parent="."]
margin_left = 508.0
margin_top = 212.0
margin_right = 508.0
margin_bottom = 212.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StuntsHeader" type="HBoxContainer" parent="."]
margin_left = 508.0
margin_top = 288.0
margin_right = 601.0
margin_bottom = 315.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StuntsHeader"]
margin_right = 93.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0.501961, 0, 1 )
text = "STUNTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="Button" parent="StuntsHeader"]
visible = false
margin_left = 97.0
margin_right = 190.0
margin_bottom = 27.0
text = "EDIT"

[node name="Label2" type="Label" parent="StuntsHeader"]
visible = false
margin_left = 194.0
margin_top = 4.0
margin_right = 385.0
margin_bottom = 22.0
text = "SKILL_EDIT_INSTRUCTION"

[node name="Stunts" type="GridContainer" parent="."]
margin_left = 508.0
margin_top = 320.0
margin_right = 508.0
margin_bottom = 320.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="_Id" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_right = -20.0
grow_horizontal = 0
text = "9999"

[node name="Edit" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 48.0
text = "EDIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditingButtons" type="HBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 48.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="EditingButtons"]
margin_right = 121.0
margin_bottom = 32.0
text = "CANCEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="EditingButtons"]
margin_left = 125.0
margin_right = 224.0
margin_bottom = 32.0
text = "SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
window_title = "CONFIRM_EXIT"
dialog_text = "UNSAVED_CHANGES_WILL_BE_LOST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonList" parent="." instance=ExtResource( 7 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="hide" from="." to="." method="_on_PersonDetail_hide"]
[connection signal="pressed" from="Status/GenderButton" to="." method="_on_GenderButton_pressed"]
[connection signal="text_changed" from="Status/MeritEdit" to="." method="_on_MeritEdit_text_changed"]
[connection signal="text_changed" from="Status/KarmaEdit" to="." method="_on_KarmaEdit_text_changed"]
[connection signal="text_changed" from="Status/PopularityEdit" to="." method="_on_PopularityEdit_text_changed"]
[connection signal="text_changed" from="Status/PrestigeEdit" to="." method="_on_PrestigeEdit_text_changed"]
[connection signal="text_changed" from="Status/AmbitionEdit" to="." method="_on_AmbitionEdit_text_changed"]
[connection signal="text_changed" from="Status/MoralityEdit" to="." method="_on_MoralityEdit_text_changed"]
[connection signal="text_changed" from="Abilities/CommandEdit" to="." method="_on_CommandEdit_text_changed"]
[connection signal="text_changed" from="Abilities/StrengthEdit" to="." method="_on_StrengthEdit_text_changed"]
[connection signal="text_changed" from="Abilities/IntelligenceEdit" to="." method="_on_IntelligenceEdit_text_changed"]
[connection signal="text_changed" from="Abilities/PoliticsEdit" to="." method="_on_PoliticsEdit_text_changed"]
[connection signal="text_changed" from="Abilities/GlamourEdit" to="." method="_on_GlamourEdit_text_changed"]
[connection signal="text_changed" from="Relations/IdealEdit" to="." method="_on_IdealEdit_text_changed"]
[connection signal="pressed" from="Relations/FatherEdit" to="." method="_on_FatherEdit_pressed"]
[connection signal="pressed" from="Relations/MotherEdit" to="." method="_on_MotherEdit_pressed"]
[connection signal="pressed" from="SkillsHeader/Edit" to="." method="_on_Skills_Edit_pressed"]
[connection signal="pressed" from="StuntsHeader/Edit" to="." method="_on_Stunts_Edit_pressed"]
[connection signal="pressed" from="Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="EditingButtons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="EditingButtons/Save" to="." method="_on_Save_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
